--- a/_config.yml
+++ b/_config.yml
@@ -94,9 +94,9 @@ author:
   github           : "DheerajRacha"
   google_plus      :
   keybase          :
-  instagram        : 
+  instagram        : "iamdheerajracha"
   lastfm           :
-  linkedin         : "https://www.linkedin.com/in/dheeraj-racha/"
+  linkedin         : "dheeraj-racha"
   orcid            : 
   pinterest        :
   soundcloud       :
