--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -1,7 +1,10 @@
 # main links links
 main:
   - title: "CV/Bio"
-    url: /files/lantaoyu_cv.pdf
+    url: /cv/
+
+  - title: "Projects"
+      url: /projects/
 
 #  - title: "Publications"
 #    url: /publications/
