fix profile photo issue

--- a/_config.yml
+++ b/_config.yml
@@ -78,7 +78,7 @@ analytics:
 # Site Author
 author:
   name             : "Dheeraj Racha"
-  avatar           : "dheerajracha.jpg"
+  avatar           : "dheerajracha.jpeg"
   bio              : "Undergraduate Senior Year, Electrical Engineering, IIT Hyderabad"
   location         : "Hyderabad, India"
   employer         : 
